fix(core): 🐛 use break-word for word wrap
Sometimes long word can overflow the screen and Citizen does not wrap it.
This forces the word to wrap so that the word can fit into the viewport.

--- a/resources/skins.citizen.styles/layout.less
+++ b/resources/skins.citizen.styles/layout.less
@@ -28,6 +28,7 @@
 .citizen-body {
 	z-index: @z-index-base; // Stop body content going over sticky header
 	grid-area: content;
+	word-wrap: break-word; // Fix overflow text (e.g. long single word text in <li>)
 }
 
 #mw-data-after-content:not( :empty ) {
